# example

./: .gitignore  CMakeLists.txt  CMakelists.txt
ReadAppList/: CMakeLists.txt  listapp.cpp  listapp.h  main.cpp
log/: CMakeLists.txt  logger.cpp  logger.h  main.cpp
window/: CMakeLists.txt  CMakelists.txt  main.cpp  sbutton.cpp  sbutton.h  swindow.cpp  swindow.h  window.cpp  window.h
window/src/: character.h  sapp.cpp  sapp.h  sbutton.cpp  sbutton.h  sobj.cpp  sobj.h  ssurface.cpp  ssurface.h  swindow.cpp  swindow.h  utils.cpp  utils.h  virtualbutton.cpp  virtualbutton.h
